--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/BookStore/.vs/BookStore/v16
+/BookStore/BookStore/obj
+/BookStore/BookStore/Pages
